[project]
name = "steam-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scrapy>=2.13.4",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
achievement = 'scrapy crawl achievement -O achievements.json'
